[gd_scene load_steps=9 format=3 uid="uid://y4om1upelsvr"]

[ext_resource type="Script" uid="uid://b0c2xpk81yby5" path="res://scenes/game/game.gd" id="1_0sr1o"]
[ext_resource type="PackedScene" uid="uid://ctpnitbyiug4h" path="res://scenes/arena/arena.tscn" id="3_lfrn8"]
[ext_resource type="PackedScene" uid="uid://bdm6wlm530nsh" path="res://scripts/components/cursor/cursor.tscn" id="5_5i0tg"]
[ext_resource type="PackedScene" uid="uid://dyrsxd3nm3uyv" path="res://scripts/components/ui/game_ui/game_ui.tscn" id="6_bdhmt"]
[ext_resource type="Environment" uid="uid://0hk0k8wp8tnc" path="res://config/post_processing/post_processing.tres" id="12_5jirj"]
[ext_resource type="Shader" uid="uid://dsy15rglggpa0" path="res://shaders/vignette/vignette.gdshader" id="12_otnwt"]

[sub_resource type="ViewportTexture" id="ViewportTexture_ftsea"]
viewport_path = NodePath("Viewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3xj4h"]
shader = ExtResource("12_otnwt")
shader_parameter/outerRadius = 4.000000190000001
shader_parameter/MainAlpha = 1.0

[node name="Game" type="Node"]
script = ExtResource("1_0sr1o")

[node name="Scripts" type="Node" parent="."]

[node name="Backgrounds" type="CanvasLayer" parent="."]
unique_name_in_owner = true
layer = -10

[node name="BG" type="Parallax2D" parent="Backgrounds"]
visible = false
repeat_size = Vector2(1280, 720)

[node name="ColorRect" type="ColorRect" parent="Backgrounds"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.493847, 0.36054534, 0.30713806, 1)

[node name="Viewport" type="SubViewport" parent="."]
unique_name_in_owner = true
disable_3d = true
transparent_bg = true
handle_input_locally = false
snap_2d_vertices_to_pixel = true
anisotropic_filtering_level = 0
canvas_item_default_texture_filter = 0
size = Vector2i(648, 368)
render_target_update_mode = 4

[node name="Arena" parent="Viewport" instance=ExtResource("3_lfrn8")]

[node name="GameView" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(640, 360)
texture = SubResource("ViewportTexture_ftsea")
metadata/_edit_lock_ = true

[node name="Foreground" type="Parallax2D" parent="."]
unique_name_in_owner = true

[node name="VisualEffects" type="CanvasLayer" parent="."]
unique_name_in_owner = true
layer = 0

[node name="Vignette" type="ColorRect" parent="VisualEffects"]
unique_name_in_owner = true
light_mask = 0
material = SubResource("ShaderMaterial_3xj4h")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0, 0, 1)

[node name="Shaders" type="Node2D" parent="VisualEffects"]
unique_name_in_owner = true

[node name="UI" type="CanvasLayer" parent="."]
unique_name_in_owner = true
layer = 10

[node name="Cursor" parent="UI" instance=ExtResource("5_5i0tg")]

[node name="GameUI" parent="UI" instance=ExtResource("6_bdhmt")]

[node name="PostProcessing" type="WorldEnvironment" parent="."]
unique_name_in_owner = true
environment = ExtResource("12_5jirj")
